# wayward-rs

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: tag-build.yml
docs/: bar-widget-lifecycle.md
docs/superpowers/plans/: 2026-05-28-minimal-niri-bar-implementation.md  2026-06-03-battery-widget-energy-icon-implementation.md  2026-06-04-notification-toasts-implementation.md
docs/superpowers/specs/: 2026-05-28-minimal-niri-bar-design.md  2026-06-03-battery-widget-energy-icon-design.md  2026-06-04-battery-dropdown-meter-design.md  2026-06-04-notification-toasts-design.md
examples/: config.toml  style.css
src/: bar.rs  config.rs  file_watch.rs  main.rs  niri.rs  services.rs  settings_spec.rs  settings_spec_test.rs  shell.rs  style.css  style.rs  style_test.rs  systray.rs  workspace.rs
src/bar/: battery.rs  clock.rs  dropdown.rs  dropdown_test.rs  item.rs  layout.rs  menu_button.rs  mod.rs  registry.rs  state.rs  style.rs  widget.rs  window.rs  workspaces.rs
src/bar/dropdown/: mod.rs  popover.rs  view.rs
src/config/: color.rs  color_test.rs  config_test.rs  mod.rs  style.rs  variables.rs  variables_test.rs
src/notifications/: actions.rs  card.rs  icon.rs  mod.rs  model.rs  model_test.rs  service.rs  window.rs
src/osd/: audio.rs  brightness.rs  mod.rs  window.rs
src/settings/: controls.rs  mod.rs  nav.rs  nav_test.rs  page.rs  page_test.rs  spec.rs  spec_test.rs  window.rs
src/shell/: bars.rs  hot_reload.rs  mod.rs  monitors.rs  notification_overlays.rs  notification_overlays_test.rs  osd_windows.rs
tests/: golden-css-variables.txt
(+84 files in other folders)
