[package]
name = "wayward"
version = "0.1.0"
edition = "2024"

rust-version = "1.93"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
futures = "0.3"
gtk4-layer-shell = "0.8"
notify = "8"
relm4 = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
wayle-audio = { git = "https://github.com/samling/wayle-services.git", rev = "2a1f9aac4caa88b9422b4ea62fe9b91580cac659" }
wayle-battery = "0.1"
wayle-brightness = "0.1"
wayle-niri = "0.1"
wayle-systray = { version = "0.1", features = ["adapter-gtk"] }
