[package]
name = "wayward"
version = "0.1.0"
edition = "2024"

rust-version = "1.93"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
futures = "0.3"
globset = "0.4"
gtk4-layer-shell = "0.8"
notify = "8"
relm4 = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
wayle-audio = "0.1"
wayle-battery = "0.1"
wayle-brightness = "0.1"
wayle-niri = "0.1"
wayle-notification = "0.1"
wayle-systray = { version = "0.1", features = ["adapter-gtk"] }
wayle-power-profiles = "0.1"
zbus = "5"
